# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added the script http-vuln-cve2009-3960 that detects and exploits the
  CVE 2009-3960 XML injection vulnerability in Adobe products. [Hani
  Benhabiles]

o Added two new probes for the Basho Riak PBC and Tarantool protocols.
  [Patrik] 

o [NSE] Added a natpmp library and the script nat-pmp-mapport that allows
  NAT mapping of external TCP and UDP ports to internal addresses. [Patrik]

o [NSE] Added the script riak-http-info that lists version and statistics
  information from the Basho Riak distributed database. [Patrik]

o [NSE] Added the script memcached-info that lists version and statistics
  information from the distributed memory object caching service memcached
  [Patrik]

o [NSE] Added the script redis-info that lists version and statistic
  information gathered from the Redis network key-value store. [Patrik]

o [NSE] Added the redis library and the script redis-brute that performs brute
  force password guessing against the Redis network key-value store. [Patrik]

o [NSE] Added the script http-proxy-brute that performs brute force password
  guessing against HTTP proxy servers. [Patrik]

o [NSE] Added the script socks-auth-info that lists supported SOCKS 5
  authentication mechanisms. [Patrik]

o [NSE] Added the script socks-brute that performs brute force password
  guessing against SOCKS 5 servers. [Patrik]

o [NSE] Added the script vmauthd-brute that performs brute force password
  guessing against the VMware authentication daemon. [Patrik]

Nmap 5.61TEST4 [2012-01-02]

o [NSE] Added a new httpspider library which is used for recursively
  crawling web sites for information.  New scripts using this
  functionality include http-backup-finder, http-email-harvest,
  http-grep, http-open-redirect, and http-unsafe-output-escaping. See
  http://nmap.org/nsedoc/ or the list later in this file for details
  on these. [Patrik]

o Our Mac OS X packages are now x86-only (rather than universal),